<resources>
    <string name="app_name">Friendlee</string>
    <string name="user_name"> Phone Number:</string>
    <string name="chooscontact">Choose Friend:</string>
    <string name="enter">Please enter phone number:</string>
    <string name="boom">powered by BoomTech</string>
    <string name="choose"> Choose a day:</string>
    <string name="from"> From:</string>
    <string name="Until"> Until:</string>
    <string name="Monday"> MONDAY</string>
    <string name="Tuesday"> TUESDAY</string>
    <string name="Thursday"> THURSDAY</string>
    <string name="Wednesday"> WEDNESDAY</string>
    <string name="Friday"> FRIDAY</string>
    <string name="Saturday"> SATURDAY</string>
    <string name="Sunday"> SUNDAY</string>
    <string name="bestfr"> Best Friend</string>
    <string name="good"> Good Friend</string>
    <string name="fr"> Friends</string>
    <string name="Acquaintances"> Acquaintances</string>
    <string name="pubblic"> Public</string>
    <string name="email">Email :</string>
    <string name="password">Verification Code :</string>
    <string name="Login">Verify</string>
    <string name="go">Go</string>
    <string name="ok">Ok</string>
    <string name="Send">Send</string>
    <string name="SignUp">SignUp</string>
    <string name="facebook_app_id">457782048232291</string>
    <string name="fb_login_protocol_scheme">fb457782048232291</string>
</resources>
