<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".activity.scheduleActivity">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:text="@string/choose"
            android:textColor="@color/textcolor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:scrollbarSize="10dp"
            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RadioButton
                    android:id="@+id/sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:paddingStart="15dp"
                    android:checked="false"
                    android:buttonTint="@color/textcolor"
                    android:text="@string/Sunday"
                    android:textColor="@color/textcolor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sun"
                    android:layout_marginTop="15dp"
                    android:paddingStart="15dp"
                    android:checked="false"
                    android:buttonTint="@color/textcolor"
                    android:layout_marginStart="15dp"
                    android:text="@string/Monday"
                    android:textColor="@color/textcolor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mon"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:buttonTint="@color/textcolor"
                    android:paddingStart="15dp"
                    android:text="@string/Tuesday"
                    android:checked="false"
                    android:textColor="@color/textcolor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tue"
                    android:buttonTint="@color/textcolor"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/Wednesday"
                    android:checked="false"
                    android:textColor="@color/textcolor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/wed"
                    android:layout_marginTop="15dp"
                    android:paddingStart="15dp"
                    android:buttonTint="@color/textcolor"
                    android:text="@string/Thursday"
                    android:checked="false"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/textcolor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thu"
                    android:layout_marginTop="15dp"
                    android:buttonTint="@color/textcolor"
                    android:paddingStart="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/Friday"
                    android:checked="false"
                    android:textColor="@color/textcolor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fri"
                    android:buttonTint="@color/textcolor"
                    android:layout_marginTop="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/Saturday"
                    android:checked="false"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/textcolor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:text="@string/from"
            android:textColor="@color/textcolor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll" />

        <RelativeLayout
            android:id="@+id/stlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/curve"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/from">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/st"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_drop"
                android:gravity="center"
                android:text="@string/from"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/until"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:text="@string/Until"
            android:textColor="@color/textcolor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stlayout" />

        <RelativeLayout
            android:id="@+id/etlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/curve"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/until">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_drop"
                android:gravity="center"
                android:text="@string/Until"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily=""
            android:paddingStart="45dp"
            android:paddingLeft="15dp"
            android:paddingEnd="45dp"
            android:text="@string/go"
            android:textColor="@color/textcolor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etlayout" />



        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/roundedbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:text="@string/enter"
                android:textColor="@color/textcolor"
                android:textSize="25sp"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/numbered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:textSize="15sp"
                android:background="@color/textcolor"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/number"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/abc"
                android:fontFamily=""
                android:paddingStart="45dp"
                android:paddingLeft="15dp"
                android:paddingEnd="45dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
               android:layout_below="@+id/numbered" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>