<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="clickHandler"
            type="com.example.meetup.model.OnClickHandlerInterface" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.contactActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:text="@string/chooscontact"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact"
            />

    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shae"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/simpleSearchView"
        app:layout_constraintBottom_toTopOf="@+id/go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:divider="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintVertical_bias="1.0"
        app:stackFromEnd="true"
        tools:listitem="@layout/contact_item" />


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contact">

        <RadioButton
            android:id="@+id/bestfr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/textcolor"
            android:checked="false"
            android:paddingStart="15dp"
            android:text="@string/bestfr"
            android:textColor="@color/textcolor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bestfr"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/textcolor"
            android:checked="false"
            android:paddingStart="15dp"
            android:text="@string/good"
            android:textColor="@color/textcolor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/good"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/textcolor"
            android:checked="false"
            android:paddingStart="15dp"
            android:text="@string/fr"
            android:textColor="@color/textcolor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Acquaintances"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fr"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/textcolor"
            android:checked="false"
            android:paddingStart="15dp"
            android:text="@string/Acquaintances"
            android:textColor="@color/textcolor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/pubblic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Acquaintances"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/textcolor"
            android:checked="false"
            android:paddingStart="15dp"
            android:text="@string/pubblic"
            android:textColor="@color/textcolor"
            android:textSize="17sp"
            android:textStyle="bold" />


    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily=""
        android:paddingStart="45dp"
        android:paddingLeft="15dp"
        android:paddingEnd="45dp"
        android:text="@string/go"
        android:textColor="@color/textcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>