<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="clickHandler"
            type="com.example.meetup.model.OnClickHandlerInterface" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".login.MainActivity">

        <RelativeLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon"/>
        </RelativeLayout>



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/usernametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/user_name"
            android:textColor="@color/textcolor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernametext"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily=""
            android:paddingStart="45dp"
            android:paddingLeft="15dp"
            android:paddingEnd="45dp"
            android:text="@string/Send"
            android:textColor="@color/textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameedit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:text="@string/password"
            android:textColor="@color/textcolor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordtext"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily=""
            android:paddingStart="45dp"
            android:paddingLeft="15dp"
            android:paddingEnd="45dp"
            android:text="@string/Login"
            android:textColor="@color/textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordedit" />

        <TextView
            android:id="@+id/signu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/SignUp"
            android:textAlignment="gravity"
            android:textColor="@color/textcolor"
            android:textSize="17sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/submit"
            app:layout_constraintTop_toBottomOf="@+id/passwordedit"

            />

        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/submit" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            app:layout_constraintEnd_toStartOf="@id/sign_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/or" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>